--- a/public/css/index.css
+++ b/public/css/index.css
@@ -20,6 +20,7 @@
   padding: 1rem;
   border-radius: 1rem;
   color: white;
+  box-shadow: 0px 0px 20px 4px rgba(0,0,0,0.7);
 }
 
 .post--card > h3 {
