--- a/public/css/post.css
+++ b/public/css/post.css
@@ -16,11 +16,12 @@ main {
   border-radius: 2rem;
   margin-bottom: 1rem;
   color: white;
+  box-shadow: 0px 0px 20px 4px rgba(0,0,0,0.7);
 }
 
 .post--image__container {
   overflow: hidden;
-  width: 25rem;
+  max-width: 90%;
   height: 15rem;
   display: flex;
   justify-content: center;
@@ -28,7 +29,7 @@ main {
 }
 
 .post--image__container > img {
-  width: 30rem;
+  max-width: 100%;
 }
 
 .markdown--container {
